--- a/KutipSmart/Views/_ViewImports.cshtml
+++ b/KutipSmart/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WBL_Project_Assignment2025
-@using WBL_Project_Assignment2025.Models
+﻿@using KutipSmart
+@using KutipSmart.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
